// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`astToEs ast - '' 1`] = `
Object {
  "match_all": Object {},
}
`;

exports[`astToEs ast - '-group:es group:kibana -group:beats group:logstash' 1`] = `
Object {
  "bool": Object {
    "must": Array [
      Object {
        "match": Object {
          "group": Object {
            "operator": "and",
            "query": "kibana logstash",
          },
        },
      },
    ],
    "must_not": Array [
      Object {
        "match": Object {
          "group": Object {
            "operator": "and",
            "query": "es beats",
          },
        },
      },
    ],
  },
}
`;

exports[`astToEs ast - 'is:online group:kibana john' 1`] = `
Object {
  "bool": Object {
    "must": Array [
      Object {
        "simple_query_string": Object {
          "query": "john",
        },
      },
      Object {
        "match": Object {
          "group": Object {
            "operator": "and",
            "query": "kibana",
          },
        },
      },
      Object {
        "term": Object {
          "online": true,
        },
      },
    ],
  },
}
`;

exports[`astToEs ast - 'john -doe is:online group:eng group:es -group:kibana -is:active' 1`] = `
Object {
  "bool": Object {
    "must": Array [
      Object {
        "simple_query_string": Object {
          "query": "john",
        },
      },
      Object {
        "match": Object {
          "group": Object {
            "operator": "and",
            "query": "eng es",
          },
        },
      },
      Object {
        "term": Object {
          "online": true,
        },
      },
      Object {
        "term": Object {
          "active": false,
        },
      },
    ],
    "must_not": Array [
      Object {
        "simple_query_string": Object {
          "query": "doe",
        },
      },
      Object {
        "match": Object {
          "group": Object {
            "operator": "and",
            "query": "kibana",
          },
        },
      },
    ],
  },
}
`;

exports[`astToEs ast - 'john -sales' 1`] = `
Object {
  "bool": Object {
    "must": Array [
      Object {
        "simple_query_string": Object {
          "query": "john",
        },
      },
    ],
    "must_not": Array [
      Object {
        "simple_query_string": Object {
          "query": "sales",
        },
      },
    ],
  },
}
`;

exports[`astToEs ast - 'john group:(eng or "marketing org") -group:"kibana team" 1`] = `
Object {
  "bool": Object {
    "must": Array [
      Object {
        "simple_query_string": Object {
          "query": "john",
        },
      },
      Object {
        "bool": Object {
          "should": Array [
            Object {
              "match": Object {
                "group": Object {
                  "operator": "or",
                  "query": "eng",
                },
              },
            },
            Object {
              "match_phrase": Object {
                "group": "marketing org",
              },
            },
          ],
        },
      },
    ],
    "must_not": Array [
      Object {
        "match_phrase": Object {
          "group": "kibana team",
        },
      },
    ],
  },
}
`;

exports[`astToEs ast - 'john group:(eng or es) -group:kibana' 1`] = `
Object {
  "bool": Object {
    "must": Array [
      Object {
        "simple_query_string": Object {
          "query": "john",
        },
      },
      Object {
        "match": Object {
          "group": Object {
            "operator": "or",
            "query": "eng es",
          },
        },
      },
    ],
    "must_not": Array [
      Object {
        "match": Object {
          "group": Object {
            "operator": "and",
            "query": "kibana",
          },
        },
      },
    ],
  },
}
`;
